# zoneminder

web-next/: CMakeLists.txt  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web-next/misc/: apache.conf  nginx.conf
web-next/src/: App.vue  main.ts  style.css
web-next/src/__tests__/: auth.test.ts
web-next/src/components/: AlarmBanner.vue  AppShell.vue  EventFilters.vue  EventList.vue  EventPlayer.vue  LogTable.vue  LoginForm.vue  MonitorCard.vue  MonitorStream.vue  MonitorTable.vue  MontageCell.vue  PtzControls.vue  SettingField.vue  StatusBadge.vue  SystemHealth.vue
web-next/src/components/monitor-edit/: AnalysisTab.vue  GeneralTab.vue  RecordingTab.vue  SourceTab.vue  TimestampTab.vue
web-next/src/components/timeline/: TimelineDetail.vue  TimelineMonitorRow.vue  TimelineOverview.vue  TimelinePlayer.vue  TimelineToolbar.vue
web-next/src/composables/: useAlarmPolling.ts  useApi.ts  useJanus.ts  useMonitorStatus.ts  useStream.ts  useTimelineRenderer.ts
web-next/src/lib/: api.ts  validate.ts
web-next/src/router/: index.ts
web-next/src/stores/: auth.ts  monitors.ts  theme.ts  timeline.ts
web-next/src/types/: api.ts  event.ts  monitor.ts  timeline.ts
web-next/src/views/: DashboardView.vue  EventsView.vue  LiveGridView.vue  LoginView.vue  LogsView.vue  MonitorEditView.vue  MontageView.vue  SettingsView.vue  TimelineView.vue  WatchView.vue
web/api/app/Controller/: HostController.php
